[package]
name = "dep"
version = "0.1.0"
authors = ["roal_yr"]
edition = "2018"


[dependencies]
bincode = "1.3"
colored = "2.0"
deepsize = "0.2"
hex = "0.4"
lazy_static = "1.4"
line_drawing = "0.8"
lz4 = "1.23"
noise = { version = "0.6", default-features = false }
num = { version = "0.3", default-features = false }
oorandom = "11.1"
pathfinding = "2.0"
png = "0.16"
resize = "0.3"
ron = "0.6"
serde = { version = "1.0", features = ["derive"] }
substring = "1.4"
terminal_size = "0.1"
textwrap = { version = "0.13", features = ["terminal_size"] }
toml = "0.5"