[package]
name = "dep"
version = "0.1.0"
authors = ["roal_yr"]
edition = "2018"


[dependencies]
bincode          = { version = "1.3",  default-features = false }
colored          = { version = "2.0",  default-features = false }
deepsize         = { version = "0.2",  default-features = false }
hex              = { version = "0.4",  default-features = true }
lazy_static      = { version = "1.4",  default-features = false }
line_drawing     = { version = "1.0",  default-features = false }
lz4              = { version = "1.23", default-features = false }
noise            = { version = "0.7",  default-features = false }
num              = { version = "0.4",  default-features = false }
oorandom         = { version = "11.1", default-features = false }
pathfinding      = { version = "3.0",  default-features = false }
png              = { version = "0.17", default-features = false }

# Do not upgrade, it switches to new data type.
resize           = { version = "0.6",  default-features = false } 

ron              = { version = "0.7",  default-features = false }
serde            = { version = "1.0",  default-features = false, features = ["derive"] }
substring        = { version = "1.4",  default-features = false }

# Do not upgrade, textwrap 0.15 depends on 0.1.
terminal_size    = { version = "0.1" , default-features = false }

textwrap         = { version = "0.15", default-features = false, features = ["terminal_size"] }
toml             = { version = "0.5",  default-features = false }