[package]
name = "game"
version = "0.1.0"
authors = ["roal_yr"]
edition = "2018"


[dependencies]

# Crates.
dep = { path = "../../dep" }

# Depending on macros so not including in `dep`.
serde = { version = "1.0", features = ["derive"]  }

# Internal components.
lib_unit_systems = { path = "../../libs/lib_unit_systems" }
lib_game_data_codec = { path = "../../libs/lib_game_data_codec" }
lib_constants = { path = "../../libs/lib_constants" }
lib_io_ops = { path = "../../libs/lib_io_ops" }
lib_text_ops = { path = "../../libs/lib_text_ops" }
lib_pseudo_rng = { path = "../../libs/lib_pseudo_rng" }
lib_pathfinding = { path = "../../libs/lib_pathfinding" }
lib_game_options = { path = "../../libs/lib_game_options" }
lib_image_ops = { path = "../../libs/lib_image_ops" }






