[package]
name = "worldgen"
version = "0.1.0"
authors = ["roal_yr"]
edition = "2018"


[dependencies]
serde = { version = "1.0", features = ["derive"]  }
noise = { version = "0.6", default-features = false }
num = { version = "0.3", default-features = false }
resize = "0.3"
line_drawing = "0.8"
bincode = "1.3"


game_options = { path = "../../libs/game_options" }
coords = { path = "../../libs/coords" }
units = { path = "../../libs/units" }
codec = { path = "../../libs/codec" }
constants_app = { path = "../../libs/constants_app" }
constants_world = { path = "../../libs/constants_world" }
io_ops = { path = "../../libs/io_ops" }
text_ops = { path = "../../libs/text_ops" }
prng = { path = "../../libs/prng" }
path = { path = "../../libs/path" }
floodfill = { path = "../../libs/floodfill" }






