[package]
name = "worldgen"
version = "0.1.0"
authors = ["roal_yr"]
edition = "2018"


[dependencies]
serde = { version = "1.0", features = ["derive"]  }
noise = { version = "0.6", default-features = false }
num = { version = "0.3", default-features = false }
resize = "0.3"
line_drawing = "0.8"
bincode = "1.3"


game_options = { path = "../../libs/game_options" }
unit_systems = { path = "../../libs/unit_systems" }
game_data_codec = { path = "../../libs/game_data_codec" }
constants = { path = "../../libs/constants" }
io_ops = { path = "../../libs/io_ops" }
text_ops = { path = "../../libs/text_ops" }
pseudo_rng = { path = "../../libs/pseudo_rng" }
pathfinding = { path = "../../libs/pathfinding" }
floodfill = { path = "../../libs/floodfill" }






