[package]
name = "worldgen"
version = "0.1.0"
authors = ["roal_yr"]
edition = "2018"


[dependencies]
serde = { version = "1.0", features = ["derive"]  }
noise = { version = "0.6", default-features = false }
num = { version = "0.3", default-features = false }
resize = "0.3"
line_drawing = "0.8"
bincode = "1.3"


lib_game_options = { path = "../../libs/lib_game_options" }
lib_unit_systems = { path = "../../libs/lib_unit_systems" }
lib_game_data_codec = { path = "../../libs/lib_game_data_codec" }
lib_constants = { path = "../../libs/lib_constants" }
lib_io_ops = { path = "../../libs/lib_io_ops" }
lib_image_ops = { path = "../../libs/lib_image_ops" }
lib_text_ops = { path = "../../libs/lib_text_ops" }
lib_pseudo_rng = { path = "../../libs/lib_pseudo_rng" }
lib_pathfinding = { path = "../../libs/lib_pathfinding" }
lib_floodfill = { path = "../../libs/lib_floodfill" }







