[package]
name = "codec"
version = "0.1.0"
authors = ["roal_yr"]
edition = "2018"


[dependencies]
constants_world = { path = "../../libs/constants_world" }
coords = { path = "../../libs/coords" }
io_ops = { path = "../../libs/io_ops" }

serde = { version = "1.0", features = ["derive"]  }
#toml = "0.5"