[package]
name = "io_ops"
version = "0.1.0"
authors = ["roal_yr"]
edition = "2018"


[dependencies]
constants_world = { path = "../../libs/constants_world" }
constants_app = { path = "../../libs/constants_app" }
prng = { path = "../../libs/prng" }

serde = { version = "1.0", features = ["derive"]  }
toml = "0.5"
png = "0.16"
hex = "0.4"