[package]
name = "lib_game_data_codec"
version = "0.1.0"
authors = ["roal_yr"]
edition = "2018"


[dependencies]

# Depending on macros so not including in `dep`.
serde = { version = "1.0", features = ["derive"]  }

# Internal components.
lib_unit_systems = { path = "../../libs/lib_unit_systems" }
lib_constants = { path = "../../libs/lib_constants" }


