[package]
name = "lib_game_options"
version = "0.1.0"
authors = ["roal_yr"]
edition = "2018"


[dependencies]

# Crates.
dep = { path = "../../dep" }

# Depending on macros so not including in `dep`.
serde = { version = "1.0", features = ["derive"]  }

# Internal components.
lib_io_ops = { path = "../../libs/lib_io_ops" }
lib_constants = { path = "../../libs/lib_constants" }
