[package]
name = "lib_image_ops"
version = "0.1.0"
authors = ["roal_yr"]
edition = "2018"


[dependencies]

# Crates.
dep = { path = "../../dep" }

# Internal components.
lib_constants = { path = "../../libs/lib_constants" }
lib_pseudo_rng = { path = "../../libs/lib_pseudo_rng" }
lib_io_ops = { path = "../../libs/lib_io_ops" }
