[package]
name = "lib_io_ops"
version = "0.1.0"
authors = ["roal_yr"]
edition = "2018"


[dependencies]

# Crates.
dep = { path = "../../dep" }

# Depending on macros so not including in `dep`.
serde = { version = "1.0", features = ["derive"]  }

# Internal components.
lib_constants = { path = "../../libs/lib_constants" }
lib_game_data_codec = { path = "../../libs/lib_game_data_codec" }
