[package]
name = "lib_pathfinding"
version = "0.1.0"
authors = ["roal_yr"]
edition = "2018"


[dependencies]

# Crates.
dep = { path = "../../dep" }

# Depending on macros so not including in `dep`.
serde = { version = "1.0", features = ["derive"]  }

# Internal components.
lib_unit_systems = { path = "../../libs/lib_unit_systems" }
lib_pseudo_rng = { path = "../../libs/lib_pseudo_rng" }
