[package]
name = "lib_text_ops"
version = "0.1.0"
authors = ["roal_yr"]
edition = "2018"


[dependencies]

# Crates.
dep = { path = "../../dep" }

# Internal components.
lib_io_ops = { path = "../../libs/lib_io_ops" }
lib_constants = { path = "../../libs/lib_constants" }
lib_game_options = { path = "../../libs/lib_game_options" }
