[package]
name = "text_ops"
version = "0.1.0"
authors = ["roal_yr"]
edition = "2018"


[dependencies]
io_ops = { path = "../../libs/io_ops" }
constants_app = { path = "../../libs/constants_app" }
game_options = { path = "../../libs/game_options" }

substring = "1.4"
terminal_size = "0.1"
colored = "2.0"
lazy_static = "1.4"
textwrap = { version = "0.13", features = ["terminal_size"] }